# Video-Sync-GUI

./: .chatpin  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_PLAN.md  CONTRIBUTING.md  Cargo.toml  FIX_PLAN.md  IMPLEMENTATION_PLAN.md  LIBCOSMIC_API_FIXES.md  MODULES.md  MODULE_MAP.md  Makefile  NEXT_SESSION.md  NEXT_SESSION_PROMPT.md  OCR_IMPLEMENTATION.md  OCR_SETUP.md  PGS_OCR_TESTING.md  PHANTOM_SIGNS_TRACK_PLAN.md  QT_MIGRATION_PLAN.md  README.md  README.txt  README_FULL.md  README_FULL_FIX1.md  README_PHASE_A.md  README_PHASE_C.md  README_QT_MIGRATION.txt  REPORT.md  REWRITE_PLAN.md  RUST_IMPLEMENTATION.md  RUST_MIGRATION_PLAN.md  RUST_PROGRESS.md  RUST_SETUP.md  Rules.txt  SETUP.md  TROUBLESHOOTING.md  (+32 more)
crates/vsg_app/: Cargo.toml  build.rs
crates/vsg_app/src/: main.rs
crates/vsg_bridge/: Cargo.toml  build.rs
crates/vsg_bridge/src/: lib.rs
crates/vsg_core/: Cargo.toml
crates/vsg_core/src/: lib.rs
crates/vsg_core/src/analysis/: analyzer.rs  chunks.rs  correlation.rs  drift_detection.rs  ffmpeg.rs  filtering.rs  mod.rs  peak_fit.rs  stability.rs  types.rs
crates/vsg_core/src/analysis/delay_selection/: mode_early.rs
crates/vsg_core/src/analysis/methods/: dtw.rs  mod.rs  onset.rs  scc.rs  spectrogram.rs
crates/vsg_core/src/chapters/: extract.rs  extractor.rs  mod.rs  parser.rs  process.rs  processor.rs  snapper.rs  types.rs
crates/vsg_core/src/config/: manager.rs  mod.rs  settings.rs
crates/vsg_core/src/extraction/: attachments.rs  container_info.rs  mkvextract.rs  mod.rs  probe.rs  tracks.rs  types.rs
crates/vsg_core/src/jobs/: discovery.rs  layout.rs  mod.rs  queue.rs  signature.rs  style_types.rs  types.rs
crates/vsg_core/src/logging/: job_logger.rs  mod.rs
crates/vsg_core/src/models/: enums.rs  jobs.rs  mod.rs  source_index.rs
crates/vsg_core/src/mux/: delay_calculator.rs  mod.rs  options_builder.rs  plan_builder.rs
crates/vsg_core/src/orchestrator/: mod.rs  queue_processor.rs  types.rs
crates/vsg_core/src/orchestrator/steps/: analyze.rs  attachments.rs  audio_correction.rs  chapters.rs  (+4 more)
crates/vsg_core/src/subtitles/: error.rs  mod.rs  types.rs
crates/vsg_ui/: Cargo.toml  build.rs
crates/vsg_ui/slint/: app.slint  theme.slint
crates/vsg_ui/slint/components/: source_group.slint  source_input.slint  track_list.slint  track_widget.slint
crates/vsg_ui/slint/windows/: add_job_dialog.slint  job_queue_dialog.slint  main_window.slint  manual_selection_dialog.slint  settings_window.slint  stub_dialogs.slint  track_settings_dialog.slint
crates/vsg_ui/src/: app.rs  app_handlers.rs  main.rs  theme.rs  types.rs  ui.rs
crates/vsg_ui/src/components/: add_job.rs  file_input.rs  job_queue.rs  log_view.rs  main_window.rs  manual_selection.rs  mod.rs  settings.rs  track_settings.rs
crates/vsg_ui/src/handlers/: analysis.rs  helpers.rs  job_queue.rs  manual_selection.rs  mod.rs  processing.rs  settings.rs  window.rs
crates/vsg_ui/src/pages/: main_window.rs
crates/vsg_ui/src/widgets/: mod.rs  text_input_with_menu.rs
crates/vsg_ui/src/windows/: add_job.rs  add_job_dialog.rs  job_queue.rs  job_queue_dialog.rs  main_window.rs  manual_selection.rs  manual_selection_dialog.rs  mod.rs  settings.rs  settings_window.rs  track_settings.rs  track_settings_dialog.rs
crates/vsg_ui/src/workers/: analysis.rs  mod.rs  queue.rs
crates/vsg_ui/ui/: main_window.slint
qt_ui/: CMakeLists.txt  main.cpp
qt_ui/add_job_dialog/: ui.cpp  ui.hpp
qt_ui/bridge/: vsg_bridge.hpp
qt_ui/job_queue_dialog/: logic.cpp  logic.hpp  ui.cpp  ui.hpp
qt_ui/main_window/: controller.cpp  controller.hpp  window.cpp  window.hpp
qt_ui/manual_selection_dialog/: logic.cpp  logic.hpp  ui.cpp  ui.hpp
qt_ui/options_dialog/: logic.cpp  logic.hpp  ui.cpp  ui.hpp
qt_ui/track_settings_dialog/: logic.cpp  logic.hpp  ui.cpp  ui.hpp
qt_ui/track_widget/: logic.cpp  logic.hpp  ui.cpp  ui.hpp
rust/vsg_core_rs/: Cargo.toml  pyproject.toml
rust/vsg_core_rs/src/analysis/: correlation.rs  delay_selection.rs  mod.rs
rust/vsg_core_rs/src/chapters/: mod.rs
rust/vsg_core_rs/src/config/: mod.rs
rust/vsg_core_rs/src/correction/: edl.rs  linear.rs  mod.rs  pal.rs  utils.rs
rust/vsg_core_rs/src/extraction/: mod.rs
rust/vsg_core_rs/src/models/: converters.rs  enums.rs  media.rs  mod.rs  results.rs  settings.rs
rust/vsg_core_rs/src/subtitles/: frame_utils.rs
rust/vsg_core_rs/src/workers/: runner.rs  signals.rs
vsg-python-bridge/: Cargo.toml
vsg-python-bridge/src/: bootstrap.rs  lib.rs  runtime.rs
vsg-ui/: Cargo.toml  i18n.toml
vsg-ui/i18n/en/: video-sync-gui.ftl
vsg-ui/src/: app.rs  config.rs  i18n.rs  main.rs
vsg-ui/src/dialogs/: job_queue.rs  mod.rs  settings.rs
vsg-ui/src/pages/: main_page.rs  mod.rs
vsg-ui/src/widgets/: file_input.rs  log_viewer.rs  mod.rs
vsg_core_rs/: .gitignore  Cargo.toml
vsg_core_rs/src/: lib.rs
vsg_core_rs/src/analysis/: drift_detection.rs  mod.rs
vsg_core_rs/src/chapters/: timestamps.rs
vsg_core_rs/src/config/: mod.rs
vsg_core_rs/src/extraction/: tracks.rs
vsg_core_rs/src/models/: jobs.rs
vsg_core_rs/src/mux/: delay_calculator.rs  mod.rs  options_builder.rs
vsg_core_rs/src/orchestrator/: mod.rs  pipeline.rs  validation.rs
vsg_core_rs/src/orchestrator/steps/: analysis_step.rs  attachments_step.rs  audio_correction_step.rs  chapters_step.rs  context.rs  extract_step.rs  mod.rs  mux_step.rs  subtitles_step.rs
vsg_core_rs/src/pipeline/: job_pipeline.rs  mod.rs
vsg_core_rs/src/pipeline_components/: log_manager.rs  mod.rs  output_writer.rs  result_auditor.rs  sync_executor.rs  sync_planner.rs  tool_validator.rs
vsg_core_rs/src/subtitles/: mod.rs
vsg_core_rs/src/ui/: add_job_dialog.rs  common.rs  generated_track_dialog.rs  job_queue_dialog.rs  main_window.rs  manual_selection_dialog.rs  mod.rs  model_manager_dialog.rs  options_dialog.rs  resample_dialog.rs  style_editor_dialog.rs  sync_exclusion_dialog.rs  track_settings_dialog.rs  track_widget.rs
vsg_core_rs/src/ui_bridge/: mod.rs
vsg_core_rs/src/workers/: mod.rs  runner.rs  signals.rs
(+826 files in other folders)
