[workspace]
resolver = "2"
members = [
    "vsg-ui",
    "vsg-python-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/wingedonezero/Video-Sync-GUI"

[workspace.dependencies]
# Core
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UI - libcosmic from pop-os
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", default-features = false, features = [
    "a11y",
    "tokio",
    "winit",
    "wgpu",
    "dbus-config",
    "multi-window",
] }

# Python bridge - PyO3 is optional, initially we use subprocess to call Python
# This avoids build-time Python version conflicts
# pyo3 = { version = "0.23", optional = true }

# Async/Utils
futures-util = "0.3"
directories = "5.0"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
flate2 = "1.0"
tar = "0.4"
zip = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1.0"
chrono = "0.4"

# i18n
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
rust-embed = "8.8"
once_cell = "1.19"
unic-langid = "0.9"
