[workspace]
resolver = "2"
members = [
    "crates/vsg_core",
    "crates/vsg_ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.70"

[workspace.dependencies]
# Shared dependencies - keep versions in sync across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
