[project]
name = "video-sync-gui"
version = "1.0.0"
description = "Video Sync GUI - Subtitle synchronization tool"
requires-python = ">=3.13"
dependencies = [
    # Core GUI Framework
    "PySide6",

    # Scientific Computing & Analysis
    "numpy",
    "scipy",
    "scikit-learn",

    # Audio Analysis - REQUIRED for correlation, onset detection, DTW, spectrogram analysis
    "librosa>=0.10.2",
    "numba>=0.61.0",  # Required for Python 3.13 support

    # Subtitle Processing
    "pysubs2",

    # Spell Checking
    "pyenchant",

    # XML Processing
    "lxml",

    # Video/Audio Processing
    "av",

    # Image Processing
    "Pillow",

    # Frame/Video Timing - REQUIRED for VFR/CFR frame-accurate timing
    "VideoTimestamps",

    # Frame Matching & Scene Detection
    "imagehash",              # Perceptual hashing for frame matching
    "opencv-python",          # Frame extraction fallback
    "ffms2",                  # Fast frame seeking (100x speedup)
    "VapourSynth",            # Best performance for frame indexing
    "scenedetect",            # Scene detection for sync validation

    # Voice Activity Detection - Used in stepping correction
    "webrtcvad-wheels",
]

[project.optional-dependencies]
# AI-powered audio separation for cross-language correlation
# NOTE: For AMD GPUs with ROCm, install torch separately:
#   pip install torch --index-url https://download.pytorch.org/whl/rocm6.2
ai-audio-nvidia = [
    "torch",                  # PyTorch with CUDA support (NVIDIA GPUs)
    "demucs",                 # AI vocal/instrument separation
]
ai-audio-cpu = [
    "torch",                  # PyTorch CPU-only (slower but works everywhere)
    "demucs",
]

[tool.uv]
# Use a local directory for the Python installation
python-downloads = "manual"
