[project]
name = "video-sync-gui"
version = "0.1.0"
description = "Video subtitle synchronization tool"
requires-python = ">=3.11"
dependencies = [
    # Core GUI Framework
    "PySide6",

    # Scientific Computing & Analysis
    "numpy",
    "scipy",
    "scikit-learn",

    # Audio Analysis
    "librosa",
    "numba>=0.61.0",
    "llvmlite>=0.43.0",

    # Subtitle Processing
    "pysubs2",

    # Font Parsing
    "fonttools",

    # Spell Checking
    "pyenchant",

    # Unicode Regex Support
    "regex",

    # OCR
    "pytesseract",

    # XML Processing
    "lxml",

    # Video/Audio Processing
    "av",
    "sounddevice",

    # Image Processing
    "Pillow",

    # Frame/Video Timing
    "VideoTimestamps",

    # Frame Matching & Scene Detection
    "imagehash",
    "opencv-python",
    "ffms2",
    "VapourSynth",
    "scenedetect[opencv]",

    # Voice Activity Detection
    "webrtcvad-wheels",

    # Data Validation (Rust-like strict typing at boundaries)
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pytest",
    "pytest-cov",
    # Type stubs
    "PySide6-stubs",
    "numpy",           # numpy includes stubs in package
    "types-Pillow",
    "lxml-stubs",
]
ocr-easyocr = ["easyocr"]
ocr-paddle = ["paddleocr"]
ai-audio = ["audio-separator[gpu]"]

[project.scripts]
vsg = "main:main"

# =============================================================================
# RUFF - Linting & Formatting
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["vsg_core", "vsg_qt"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (modern Python syntax)
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking (TYPE_CHECKING blocks)
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments (we have complex functions)
    "PLR2004", # magic value comparison (too noisy)
    "SIM108",  # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["vsg_core", "vsg_qt"]
force-single-line = false
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "PLR2004"]  # Allow unused args and magic values in tests
"__init__.py" = ["F401"]               # Allow unused imports in __init__

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# PYRIGHT - Type Checking
# =============================================================================
[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"  # Start here, move to "strict" over time

include = ["vsg_core", "vsg_qt"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".git",
    "build",
    "dist",
]

# Gradual strictness - enable these as codebase improves:
reportMissingImports = true
reportMissingTypeStubs = false          # Too noisy for external libs without stubs
reportMissingModuleSource = false       # Don't complain about libs without source
reportUnusedImport = true
reportUnusedVariable = true
reportUnnecessaryTypeIgnoreComment = true

# These are "strict" mode rules - enable gradually:
# reportMissingTypeArgument = true      # Generic[T] without T
# reportUnknownMemberType = true        # Any propagation
# reportUnknownArgumentType = true      # Any in function args
# reportUnknownVariableType = true      # Any assigned to variable

# =============================================================================
# PYTEST
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# =============================================================================
# COVERAGE
# =============================================================================
[tool.coverage.run]
source = ["vsg_core", "vsg_qt"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
