[package]
name = "vsg-python-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["process", "io-util"] }

# Serialization for data exchange with Python
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Paths
directories.workspace = true

# HTTP client for downloading Python
reqwest.workspace = true
futures-util.workspace = true

# Archive handling
flate2.workspace = true
tar.workspace = true
zip.workspace = true

# Note: PyO3 is NOT used here to avoid build-time Python version conflicts.
# We use subprocess calls to our bundled Python instead.
# PyO3 can be added later for performance-critical hot paths.
