[package]
name = "vsg-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "video-sync-gui"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
libcosmic.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
directories.workspace = true
reqwest.workspace = true
flate2.workspace = true
tar.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Local dependencies
vsg-python-bridge = { path = "../vsg-python-bridge" }

# i18n (internationalization)
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
rust-embed = "8.8"
once_cell = "1.19"
unic-langid = "0.9"

# Utilities
chrono = "0.4"
