[package]
name = "vsg-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "video-sync-gui"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
libcosmic.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
directories.workspace = true
reqwest.workspace = true
flate2.workspace = true
tar.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Local dependencies
vsg-python-bridge = { path = "../vsg-python-bridge" }

# i18n (internationalization)
i18n-embed.workspace = true
i18n-embed-fl.workspace = true
rust-embed.workspace = true
once_cell.workspace = true
unic-langid.workspace = true

# Utilities
chrono = "0.4"
