[package]
name = "vsg_core_rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"  # Required by pyo3 0.27+

[lib]
name = "vsg_core_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
numpy = "0.27"  # PyO3 numpy bindings (NOT Python numpy)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
