[package]
name = "vsg_app"
description = "Video Sync GUI - Qt application"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "video-sync-gui"
path = "src/main.rs"

[dependencies]
vsg_core = { path = "../vsg_core" }
vsg_bridge = { path = "../vsg_bridge" }
cxx = "1.0"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
