[package]
name = "vsg_app"
description = "Video Sync GUI - Qt application"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "video-sync-gui"
path = "src/main.rs"

[dependencies]
# vsg_bridge dependency ensures it builds first (for CMake to find libvsg_bridge.a)
# We don't actually use it in Rust - the Qt binary links against it
vsg_bridge = { path = "../vsg_bridge" }

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
# Adding vsg_bridge as build-dependency ensures its build.rs completes
# before our build.rs runs, so libvsg_bridge.a exists when we need it
vsg_bridge = { path = "../vsg_bridge" }
