[package]
name = "vsg_bridge"
description = "CXX bridge between vsg_core (Rust) and Qt UI (C++)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
# The `links` key tells cargo this crate provides a native library.
# This creates a build script dependency chain: any crate that depends
# on vsg_bridge will have its build.rs run AFTER vsg_bridge's build.rs,
# and can access DEP_VSG_BRIDGE_* environment variables.
links = "vsg_bridge"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
vsg_core = { path = "../vsg_core" }
cxx = "1.0"
dirs = "5.0"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.4"

[build-dependencies]
cxx-build = "1.0"
