[package]
name = "vsg_core"
description = "Core library for Video Sync GUI - backend logic with no UI dependencies"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
