[package]
name = "vsg_core"
description = "Core library for Video Sync GUI - backend logic with no UI dependencies"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
toml_edit = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
chrono = "0.4"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.10"
