[package]
name = "vsg_ui"
description = "Video Sync GUI - GTK4/Relm4 user interface"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "video-sync-gui"
path = "src/main.rs"

[dependencies]
# Core library
vsg_core = { path = "../vsg_core" }

# GTK4 + Relm4 - Modern Rust GUI framework
gtk = { package = "gtk4", version = "0.10", features = ["v4_12"] }
relm4 = { version = "0.10", features = ["macros", "libadwaita"] }
relm4-components = "0.10"
libadwaita = { version = "0.8", features = ["v1_4"] }

# Async runtime
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = "0.1.44"

# URL decoding for drag-drop
percent-encoding = "2.3.2"

# Unique IDs
uuid = { version = "1.20.0", features = ["v4"] }

# Zip support for log archiving
zip = "7.2.0"

# Timestamp formatting for log archives
chrono = "0.4"
