[package]
name = "vsg_ui"
description = "Video Sync GUI - GTK4/Relm4 user interface (in development)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "video-sync-gui"
path = "src/main.rs"

[dependencies]
# Core library
vsg_core = { path = "../vsg_core" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
